printing differences between versions

--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "ngw": {
         "host": "https://wobasgis.nextgis.com",
         "login": "wobas",
-        "password": "Pidor_9998"
+        "password": "Kl4692171_1"
     },
     "top_layer": {
         "id": 47
