--- a/config.json
+++ b/config.json
@@ -1,19 +1,26 @@
 {
     "ngw": {
         "host": "https://wobasgis.nextgis.com",
-        "login": "wobas",
-        "password": "Kl4692171_1"
+        "login": "YOUR_LOGIN",
+        "password": "YOUR_PWD"
     },
     "top_layer": {
-        "id": 47
+        "id": 49,
+        "attribute_params_for_message": ["name"],
+        "buffer": 100
     },
     "bottom_layer": {
-        "id": 48
+        "id": 50, 
+        "attribute_params_for_message": ["name"],
+        "buffer": 200
     },
-    "script_parametrs": {
-        "geofence_mode": "point-polygon",
+    "script_parameters": {
+        "geofence_mode": "intersection",
         "tmp_files_path": "./tmp/",
         "update_period_sec": 10,
-        "message_type": "console_message"
+        "message_type": "telegram_message"
+    },
+    "optional_parameters": {
+        "tg_user_id": YOUR_USER_ID_NUMBER
     }
 }
